--- a/SMS/SMS/Views/Admin/TeacherDetails.cshtml
+++ b/SMS/SMS/Views/Admin/TeacherDetails.cshtml
@@ -54,7 +54,7 @@
 
     </dl>
 </div>
-@*<p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>*@
+<p>
+        @Html.ActionLink("Edit", "EditTeacherDetails", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "TeacherDetails", new { id = Model.Id })
+    </p>
