--- a/SMS/SMS/Views/Teacher/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Teacher/LoggedInView.cshtml
@@ -380,7 +380,10 @@
             @Html.ActionLink("Back to List", "Index")
         </p>*@
 
-
+    &emsp; &emsp; @Html.ActionLink("My Sections", "TeacherSections", new { id = Tid })
+    &emsp; &emsp; @Html.ActionLink("Uploaded Results", "UploadedRes", new { id = Tid })
+    &emsp; &emsp;@Html.ActionLink("Upload Attendance", "MarkAttendance", new { id = Tid })
+    &emsp; &emsp; @Html.ActionLink("Timetable", "ViewTimetable", new { id = Tid })
 
     <br><br><br><br>
 
