--- a/SMS/SMS/Views/Student/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Student/LoggedInView.cshtml
@@ -311,6 +311,8 @@
 
     @Html.ActionLink("DateSheet", "ViewDatesheet", new { id = Sid })
 
+    &emsp; &emsp; @Html.ActionLink("Dues Summary", "StudentFeeChallans", new { id = Sid })
+
 
     <h3 style="color  :#ECCF3E; font-family : Calisto MT">
         &emsp; &emsp;&emsp; &emsp; &emsp; &emsp; My Profile
