--- a/SMS/SMS/Views/Admin/EditFeeChallans.cshtml
+++ b/SMS/SMS/Views/Admin/EditFeeChallans.cshtml
@@ -94,7 +94,7 @@
     }
 
 
-    input {
+    .input {
         border: none;
         box-sizing: border-box;
         border-bottom: 1px solid black;
@@ -173,7 +173,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Fee, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Fee, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Fee, new { htmlAttributes = new { @class = "input", @type = "number", required = "required" } })
                     @Html.ValidationMessageFor(model => model.Fee, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -181,7 +181,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Scholarships, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Scholarships, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Scholarships, new { htmlAttributes = new { @class = "input", @type = "number" } })
                     @Html.ValidationMessageFor(model => model.Scholarships, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -189,7 +189,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Fine, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Fine, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Fine, new { htmlAttributes = new { @class = "input", @type = "number", required = "required" } })
                     @Html.ValidationMessageFor(model => model.Fine, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -202,6 +202,13 @@
                         <option value="1">Unpaid</option>
                     </select>
                     @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "input" , required = "required" } })
+                    @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
                 </div>
             </div>
 
