Student can view uploaded assignments, Updated DB

--- a/SMS/SMS/Views/Student/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Student/LoggedInView.cshtml
@@ -312,6 +312,9 @@
     @Html.ActionLink("DateSheet", "ViewDatesheet", new { id = Sid })
 
     &emsp; &emsp; @Html.ActionLink("Dues Summary", "StudentFeeChallans", new { id = Sid })
+    &emsp; &emsp; @Html.ActionLink("Uploaded Assignments", "UploadedAssign", new { id = Sid })
+
+
 
 
     <h3 style="color  :#ECCF3E; font-family : Calisto MT">
