Done Submit assignments by students, View submitted assignments by Teacher

--- a/SMS/SMS/Views/Teacher/TeacherSections.cshtml
+++ b/SMS/SMS/Views/Teacher/TeacherSections.cshtml
@@ -183,7 +183,9 @@
                 }
 
 
-                @Html.ActionLink("Upload Result", "Result", new { id = item.SectionId, Tid = Tid, check = 0, text = "" })
+                @Html.ActionLink("Upload Result", "Result", new { id = item.SectionId, Tid = Tid, check = 0, text = "" }) &emsp;|
+              &emsp;  @Html.ActionLink("Assignments", "SectionAssign", new { Sid = item.SectionId, Tid = Tid })
+
 
             </td>
         </tr>
