Teacher request submission.

--- a/SMS/SMS/Views/Teacher/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Teacher/LoggedInView.cshtml
@@ -307,13 +307,7 @@
     &emsp; &emsp; @Html.ActionLink("Uploaded Results", "UploadedRes", new { id = Tid })
     &emsp; &emsp; @Html.ActionLink("My Payroll", "TeacherPayroll", new { id = Tid })
     &emsp; &emsp; @Html.ActionLink("Timetable", "ViewTimetable", new { id = Tid })
-
-
-
-
-
-
-
+    &emsp; &emsp; @Html.ActionLink("My Requests", "TeacherRequests", new { id = Tid })
 
 
 
