--- a/SMS/SMS/Views/Teacher/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Teacher/LoggedInView.cshtml
@@ -308,6 +308,7 @@
     &emsp; &emsp; @Html.ActionLink("My Payroll", "TeacherPayroll", new { id = Tid })
     &emsp; &emsp; @Html.ActionLink("Timetable", "ViewTimetable", new { id = Tid })
     &emsp; &emsp; @Html.ActionLink("My Requests", "TeacherRequests", new { id = Tid })
+    &emsp; &emsp; @Html.ActionLink("Assignments", "ViewAll", new { id = Tid })
 
 
 
