--- a/SMS/SMS/Views/Student/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Student/LoggedInView.cshtml
@@ -314,6 +314,8 @@
 
     &emsp; &emsp; @Html.ActionLink("Dues Summary", "StudentFeeChallans", new { id = Sid })
     &emsp; &emsp; @Html.ActionLink("Uploaded Assignments", "UploadedAssign", new { id = Sid })
+  
+    &emsp; &emsp; @Html.ActionLink("View Timetable", "Detail", new { id = Sid })
 
 
 
