--- a/SMS/SMS/Views/Admin/CreateClass.cshtml
+++ b/SMS/SMS/Views/Admin/CreateClass.cshtml
@@ -125,7 +125,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+       al     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <select name="TeacherNames" id="cmb">
 
