--- a/SMS/SMS/Views/Student/Detail.cshtml
+++ b/SMS/SMS/Views/Student/Detail.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<SMS.Models.ViewTimeTable>
+
 <hr>
 <br /><br />
 
@@ -15,17 +16,15 @@
         border: 1px solid #dddddd;
         text-align: center;
         padding: 8px;
-        height: 70px;
-        width: 50px;
+        height:70px;
+        width:50px;
     }
 
     tr:nth-child(even) {
         background-color: #dddddd;
     }
 </style>
-
-
-<table class="table">
+<table>
     <tr>
        
         <th>
@@ -51,7 +50,8 @@
 
 @foreach (var item in Model) {
     <tr>
-       <td>
+        <td>
+     
             @Html.DisplayFor(modelItem => item.day)
         </td>
         <td>
