Report for all students and teachers.

--- a/SMS/SMS/Views/Admin/Teacher.cshtml
+++ b/SMS/SMS/Views/Admin/Teacher.cshtml
@@ -290,7 +290,10 @@
     }
     <h3 style="color  :#ECCF3E; font-family : Calisto MT">
         &emsp; &emsp;    @Html.ActionLink("Add New Teacher", "AddTeacher")
-    </h3><br /><br />
+    </h3>
+    <p>
+        <a class="btn btn-success" href=@Url.Action("ExportTeacherReport")> Generate Report </a>
+    </p><br />
 
     <table align='center'>
 
