--- a/SMS/SMS/Views/Admin/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Admin/LoggedInView.cshtml
@@ -310,6 +310,8 @@
     &emsp; &emsp; @Html.ActionLink("Manage Courses", "AllCourses")
     <br />
     &emsp; &emsp; @Html.ActionLink("Report for All Classes", "AllClasses")
+    <br />
+    &emsp; &emsp; @Html.ActionLink("Report for Assignments", "C")
 
 
 
