--- a/SMS/SMS/Views/Teacher/TeacherSections.cshtml
+++ b/SMS/SMS/Views/Teacher/TeacherSections.cshtml
@@ -183,9 +183,7 @@
                 }
 
 
-                @Html.ActionLink("Upload Result", "Result", new { id = item.SectionId, Tid = Tid, check = 0, text = "" }) &emsp;|
-              &emsp;  @Html.ActionLink("Assignments", "SectionAssign", new { Sid = item.SectionId, Tid = Tid })
-
+                @Html.ActionLink("Upload Result", "Result", new { id = item.SectionId, Tid = Tid, check = 0, text = "" })     
 
             </td>
         </tr>
