--- a/SMS/SMS/Views/Student/SubmitFiles.cshtml
+++ b/SMS/SMS/Views/Student/SubmitFiles.cshtml
@@ -1,25 +1,154 @@
 ﻿@model SMS.Models.SubmitFiles
+@{
+    Layout = null;
+}
+<title>Uploaded Assignments</title>
+<style>
+    body {
+        font-family: Calisto MT;
+        margin: 0;
+    }
+
+    table {
+        font-family: Calisto MT, sans-serif;
+        border-collapse: collapse;
+        width: 70%;
+    }
+
+    td, th {
+        border: 1px solid #F0E68C;
+        text-align: center;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #FAFAD2;
+    }
+
+
+    /* Style the top navigation bar */
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Calisto MT;
+    }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+    input {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+        background: transparent;
+        color: #b18757;
+        font-weight: bold;
+        font-family: 'Poppins';
+        font-size: 20px;
+    }
+
+    .submit {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+        background: transparent;
+        color: #b18757;
+        font-weight: bold;
+        font-family: 'Poppins';
+        font-size: 20px;
+        width: 130px;
+        border-radius: 25px;
+        -moz-border-radius: 25px;
+        -webkit-border-radius: 25px;
+        text-transform: uppercase;
+        font-size: 13px;
+        cursor: pointer;
+    }
+
+    .submit-link {
+        border: 2px solid #b18757;
+        text-decoration: none;
+        display: inline-block;
+        vertical-align: middle;
+        padding: 12px 0;
+        text-align: center;
+    }
+
+        .submit-link:hover {
+            background: #FAFAD2;
+            color: #b18757;
+        }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    b {
+        color: #ECCF3E;
+        font-size: 19px;
+    }
+</style>
+@{
+    var w = Request.Url.Segments[3];
+}
+<div class="navbar">
+    <div class="dropdown">
+
+        <div class="dropdown-content">
+            @Html.ActionLink("My Account", "LoggedInView", new { id = w })
+            <a href="~/Home/Index">Logout</a>
+        </div>
+    </div>
+</div>
+<br />
 @{ var id = Request.QueryString["Stu"];}
-@using (Html.BeginForm("SubmitFiles", "Student",new { q = id}, FormMethod.Post, new { enctype = "multipart/form-data"}))
+
+@{
+    var o = Request.QueryString["Stu"];
+}
+@using (Html.BeginForm("SubmitFiles", "Student", new { q = id }, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <h4>SubmitFiles</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-  <b>You have to submit a zipped folder containing your files.</b> 
-        <br/>
 
-      
+        <br>
+        <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Submit Files </h2>
+        <br>
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        &emsp; &emsp;&emsp;  <b>
+            Instructions:<br />
+            &emsp; &emsp;&emsp; &emsp;    For multiple files submit a zipped folder.
+            <br />
+            <br />
+            &emsp; &emsp;&emsp; &emsp;    Your file/folder must be named as 'Assignment Title | Your Registration Number'
+        </b>
+        <br />
+
+        <br />
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="file" name="Zip" />
-                
-                <br/>
-                <input type="submit" value="Submit" class="btn btn-default" />
+                &emsp; &emsp;&emsp; &emsp;   <font size="3"><input type="file" name="Zip" /></font>
+                <br />
+                <br />
+                &emsp; &emsp;&emsp; &emsp; &emsp; &emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                <input type="submit" value="Submit" class="submit-link submit" />
             </div>
         </div>
     </div>
-}<div>
-    @Html.ActionLink("Back to List", "Index")
+}
+<div>
+    &emsp; &emsp;&emsp; &emsp;  @Html.ActionLink("Back to List", "UploadedAssign", new { id = o })
 </div>
+<br /><br />
