--- a/SMS/SMS/Views/Student/UploadedAssign.cshtml
+++ b/SMS/SMS/Views/Student/UploadedAssign.cshtml
@@ -1,40 +1,191 @@
 ﻿@model IEnumerable<SMS.Models.Assignment>
+@{
+    Layout = null;
+}
+<title>Uploaded Assignments</title>
+<style>
+    body {
+        font-family: Calisto MT;
+        margin: 0;
+    }
 
-<table class="table">
+    table {
+        font-family: Calisto MT, sans-serif;
+        border-collapse: collapse;
+        width: 70%;
+    }
+
+    td, th {
+        border: 1px solid #F0E68C;
+        text-align: center;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #FAFAD2;
+    }
+
+
+    /* Style the top navigation bar */
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Calisto MT;
+    }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+    input {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+        background: transparent;
+        color: #b18757;
+        font-weight: bold;
+        font-family: 'Poppins';
+        font-size: 20px;
+    }
+
+    .submit {
+        width: 130px;
+        border-radius: 25px;
+        -moz-border-radius: 25px;
+        -webkit-border-radius: 25px;
+        text-transform: uppercase;
+        font-size: 13px;
+        cursor: pointer;
+    }
+
+    .submit-link {
+        border: 2px solid #b18757;
+        text-decoration: none;
+        display: inline-block;
+        vertical-align: middle;
+        padding: 12px 0;
+        text-align: center;
+    }
+
+        .submit-link:hover {
+            background: #FAFAD2;
+            color: #b18757;
+        }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    b {
+        color: #ECCF3E;
+        font-size: 19px;
+    }
+</style>
+@{
+    var id = Request.Url.Segments[3];
+}
+<div class="navbar">
+    <div class="dropdown">
+
+        <div class="dropdown-content">
+            @Html.ActionLink("My Account", "LoggedInView", new { id = id })
+            <a href="~/Home/Index">Logout</a>
+        </div>
+    </div>
+</div>
+<br />
+<h1 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Assignments </h1>
+<br>
+
+<table align="center">
     <tr>
+        <th>
+            Course
+        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.TotalMarks)
         </th>
+
         <th>
             Title
         </th>
+
         <th>
-            @Html.DisplayNameFor(model => model.CourseId)
+
         </th>
         <th>
-                Due Date
+            Due Date
         </th>
         <th> Activity </th>
     </tr>
-    @{ var Sid = Request.Url.Segments[3];}
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalMarks)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-         <td>
-            @Html.DisplayFor(modelItem => item.CourseId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DueDate)
-        </td>
-        <td>
-            @Html.ActionLink("Submit", "SubmitFiles", new { id=item.AssignmentId, Stu = Sid }) 
-         </td>
-    </tr>
-}
+    @{ var Sid = Request.Url.Segments[3];
+        int i = 0;
+        bool done = false;
+        int S = Convert.ToInt32(Sid);}
+    @foreach (var item in Model)
+    {
+        <tr>
+
+            <td>
+                <p>@ViewBag.C[i]</p>
+                @{ i++;}
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalMarks)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            @{ var t = @Html.DisplayFor(modelItem => item.Title); }
+            <td>
+                @Html.ActionLink("Download", "Download", "Teacher", new { id = item.AssignmentId, Title = t }, new { htmlAttributes = new { @class = "form-control" } })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DueDate)
+            </td>
+            @foreach (var p in ViewBag.DoneS)
+            {
+                if (S == p)
+                {
+                    done = true;
+                    break;
+                }
+            }
+            <td>
+                @if (DateTime.Now > item.DueDate && !done)
+                {
+                    <p style="color : red">Expired</p>
+                }
+                else if (DateTime.Now > item.DueDate && done)
+                {
+                    <p style="color : green">Submitted</p><br />
+
+                }
+                else if (DateTime.Now < item.DueDate && !done)
+                {
+                    @Html.ActionLink("Submit", "SubmitFiles", new { id = item.AssignmentId, Stu = Sid })
+                }
+                else if (DateTime.Now < item.DueDate && done)
+                {
+                    <p style="color : green">Submitted</p><br />
+
+                    @Html.ActionLink("ReSubmit", "SubmitFiles", new { id = item.AssignmentId, Stu = Sid })
+
+                }
+            </td>
+        </tr>
+                }
 
 </table>
