--- a/SMS/SMS/Views/Teacher/Result.cshtml
+++ b/SMS/SMS/Views/Teacher/Result.cshtml
@@ -1,5 +1,112 @@
 ﻿@model SMS.Models.ResultVM
+@{
+    Layout = null;
+}
+<title>Uploaded Result</title>
+<style>
+    body {
+        font-family: Calisto MT;
+        margin: 0;
+    }
 
+    table {
+        font-family: Calisto MT, sans-serif;
+        border-collapse: collapse;
+        width: 70%;
+    }
+
+    td, th {
+        border: 1px solid #F0E68C;
+        text-align: center;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #FAFAD2;
+    }
+
+
+    /* Style the top navigation bar */
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Calisto MT;
+    }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+    input {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+        background: transparent;
+        color: #b18757;
+        font-weight: bold;
+        font-family: 'Poppins';
+        font-size: 20px;
+    }
+
+    .submit {
+        width: 130px;
+        border-radius: 25px;
+        -moz-border-radius: 25px;
+        -webkit-border-radius: 25px;
+        text-transform: uppercase;
+        font-size: 13px;
+        cursor: pointer;
+    }
+
+    .submit-link {
+        border: 2px solid #b18757;
+        text-decoration: none;
+        display: inline-block;
+        vertical-align: middle;
+        padding: 12px 0;
+        text-align: center;
+        width: 250px;
+    }
+
+        .submit-link:hover {
+            background: #FAFAD2;
+            color: #b18757;
+        }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    b {
+        color: #ECCF3E;
+        font-size: 19px;
+    }
+</style>
+
+@{
+    var id = Request.Url.Segments[3];
+}
+<div class="navbar">
+    <div class="dropdown">
+
+        <div class="dropdown-content">
+            @Html.ActionLink("My Account", "LoggedInView", new { id = id })
+            <a href="~/Home/Index">Logout</a>
+        </div>
+    </div>
+</div>
+<br />
+<br />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -16,53 +123,50 @@
         <input type="text" name="Course" value=@CourseId style="display:none" />
         <input type="text" name="Section" value=@SectionId style="display:none" />
         <div class="form-group">
-            <hr />
+
             <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Upload Results </h2>
             <div class="form-group">
 
-                <p><font size="4">&emsp; &emsp; Class &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;@ViewBag.ClassName <br></font>
+                <p><font size="4">&nbsp;&nbsp;&emsp; &emsp; Class &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;@ViewBag.ClassName <br></font>
             </div>
             <font size="4">
-                &emsp; &emsp; Section &emsp; &emsp;&nbsp;&nbsp; &emsp; &emsp;@ViewBag.Sec <br>
-                &emsp; &emsp; Course &emsp; &emsp;&nbsp; &emsp; &emsp; @ViewBag.CN
+                &emsp;&nbsp; &nbsp;&emsp; Section &emsp; &emsp;&nbsp;&nbsp; &emsp; &emsp;&nbsp;@ViewBag.Sec <br /><br />
+                &emsp;&nbsp;&nbsp; &emsp; Course &emsp; &emsp;&nbsp; &emsp; &emsp; &nbsp;@ViewBag.CN
             </font>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @if (ViewBag.T == "")
-                {
-                    <input type="text" name="Title" placeholder="Title as 'Mid term | 2016-17'" required />
-                }
-                else
-                {
-                    <input type="text" name="Title" placeholder="Title as 'Mid term | 2016-17'" required value="@ViewBag.T" />
+            <br />
+            &emsp; &emsp;&emsp; <b>
+                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            </b>       &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;  @if (ViewBag.T == "")
+            {
+                <t /><t /><t />  <input type="text" name="Title" placeholder="Title as 'Mid term | 2016-17'" required />
+            }
+            else
+            {
+                <t /><t /><t />    <input type="text" name="Title" placeholder="Title as 'Mid term | 2016-17'" style="width : 300px" required value="@ViewBag.T" />
 
-                }
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                <br />
-                &emsp; &emsp;<font size="3">
-                    <p style="background-color:rgba(254, 76, 76, 0.75) ;font-family : Calisto MT">@ViewBag.Err</p>
-                </font>
-            </div>
+            }
+            &emsp; &emsp;   @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            <br />
+            &emsp; &emsp;<font size="3">
+                <p style="background-color:rgba(254, 76, 76, 0.75) ;font-family : Calisto MT">@ViewBag.Err</p>
+            </font>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.TotalMarks, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="number" name="TotalMarks" style="width : 200px" required />
-
-                @Html.ValidationMessageFor(model => model.TotalMarks, "", new { @class = "text-danger" })
-            </div>
+            &emsp; &emsp;&emsp; <b>Total Marks</b>&emsp; &emsp;&emsp;
+            <input type="number" name="TotalMarks" style="width : 300px" required />
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Upload Result of Section" class="btn btn-default" />
-            </div>
+            <br />
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <input type="submit" value="Upload Result of Section" class="submit-link submit" />
         </div>
     </div>
 
             }
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @{ var Tid = Request.QueryString["Tid"];}
+    &emsp; &emsp;&emsp;&emsp;  @Html.ActionLink("Back to List", "TeacherSections", new { Tid = Tid })
 </div>
