--- a/SMS/SMS/Views/Teacher/SubmittedAssign.cshtml
+++ b/SMS/SMS/Views/Teacher/SubmittedAssign.cshtml
@@ -1,9 +1,113 @@
 ﻿@model IEnumerable<SMS.Models.SubmittedAssign>
+@{ Layout = null;}
+<title>Submitted Assignments</title>
+<style>
+    body {
+        font-family: Calisto MT;
+        margin: 0;
+    }
 
-<table class="table">
+    table {
+        font-family: Calisto MT, sans-serif;
+        border-collapse: collapse;
+        width: 70%;
+    }
+
+    td, th {
+        border: 1px solid #F0E68C;
+        text-align: center;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #FAFAD2;
+    }
+
+
+    /* Style the top navigation bar */
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Calisto MT;
+    }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+    input {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+        background: transparent;
+        color: #b18757;
+        font-weight: bold;
+        font-family: 'Poppins';
+        font-size: 20px;
+    }
+
+    .submit {
+        width: 130px;
+        border-radius: 25px;
+        -moz-border-radius: 25px;
+        -webkit-border-radius: 25px;
+        text-transform: uppercase;
+        font-size: 13px;
+        cursor: pointer;
+    }
+
+    .submit-link {
+        border: 2px solid #b18757;
+        text-decoration: none;
+        display: inline-block;
+        vertical-align: middle;
+        padding: 12px 0;
+        text-align: center;
+    }
+
+        .submit-link:hover {
+            background: #FAFAD2;
+            color: #b18757;
+        }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    b {
+        color: #ECCF3E;
+        font-size: 19px;
+    }
+</style>
+@{
+    var id = Request.Url.Segments[3];
+    int i = 0;
+}
+<div class="navbar">
+    <div class="dropdown">
+
+        <div class="dropdown-content">
+            @Html.ActionLink("My Account", "LoggedInView", new { id = id })
+            <a href="~/Home/Index">Logout</a>
+        </div>
+    </div>
+</div>
+<br />
+<br />
+<table align="center">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.SubmittedBy)
+            Submitted By
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Submited_On)
@@ -12,25 +116,27 @@
             @Html.DisplayNameFor(model => model.FileName)
         </th>
         <th>
-            
+
         </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SubmittedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Submited_On)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FileName)
-        </td>
-        <td>
-            @Html.ActionLink("Download", "DownloadFiles", new { id = item.Assignemnt, Sid = item.SubmittedBy})
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <p>@ViewBag.Reg[i]</p>
+                @{ i++;}
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Submited_On)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FileName)
+            </td>
+            <td>
+                @Html.ActionLink("Download", "DownloadFiles", new { id = item.Assignemnt, Sid = item.SubmittedBy })
+            </td>
+        </tr>
+                    }
 
 </table>
