All Classes Report

--- a/SMS/SMS/Views/Admin/Class.cshtml
+++ b/SMS/SMS/Views/Admin/Class.cshtml
@@ -169,40 +169,7 @@
     </div>
     <div class="page">
         <!-- Page Header-->
-        <header class="page-header">
-            <!-- RD Navbar-->
-            <div class="rd-navbar-wrap">
-                <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed">
-                    <div class="rd-navbar-main-outer">
-                        <div class="rd-navbar-main">
-                            <!-- RD Navbar Panel-->
-                            <div class="rd-navbar-panel">
-                                <!-- RD Navbar Toggle-->
-                                <!-- RD Navbar Brand-->
-
-                            </div>
-                            <div class="rd-navbar-nav-wrap">
-                                <!-- RD Navbar Nav    -->
-                                <ul class="rd-navbar-nav">
-                                    <li class="rd-nav-item active">
-                                        <a class="rd-nav-link" href="index.html">Home</a>
-                                    </li>
-                                    <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="about.html">About</a>
-                                    </li>
-                                    <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="typography.html">Typography</a>
-                                    </li>
-                                    <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="contacts.html">Contacts</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </header>
+        <header class="page-header"></header>
         <section>
             <!-- Swiper-->
             <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
@@ -219,7 +186,7 @@
                                             </h2>
                                             <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450">
                                                 <a class="button button-primary-gradient"
-                                                   ="#"><span>sign up for excursion</span></a>
+                                                   ="#">
                                             </div>
                                         </div>
                                     </div>
@@ -237,7 +204,7 @@
                                             <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
                                                 Providing Students with  <span class="text-italic font-weight-bold">Professional Education</span>
                                             </h2>
-                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"></a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -254,7 +221,7 @@
                                             <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
                                                 Become a Part of Our Campus and <span class="text-italic font-weight-bold">Make Friends</span>
                                             </h2>
-                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -273,7 +240,7 @@
     <script src="~/js/core.min.js"></script>
     <script src="~/js/script.js"></script>
     <br>
-        <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Manage Classes </h2>
+    <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Manage Classes </h2>
     <br>
     @using (Html.BeginForm("Class", "Admin", FormMethod.Get))
             {
