--- a/SMS/SMS/Views/Admin/CreateClass.cshtml
+++ b/SMS/SMS/Views/Admin/CreateClass.cshtml
@@ -1,154 +1,270 @@
 ﻿@model SMS.Models.School_Class
+@{ Layout = null;}
+<title>Add Class</title>
 
-<style>
-    .ie-panel {
-        display: none;
-        background: #212121;
-        padding: 10px 0;
-        box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
-        clear: both;
-        text-align: center;
-        position: relative;
-        z-index: 1;
-    }
-
-    html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
-        display: block;
-    }
-</style>
-
-<style>
-    body {
-        font-family: Calisto MT;
-        margin: 0;
-    }
-
-    table {
-        font-family: Calisto MT, sans-serif;
-        border-collapse: collapse;
-        width: 70%;
-    }
-
-    td, th {
-        border: 1px solid #F0E68C;
-        text-align: center;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #FAFAD2;
-    }
-
-
-    /* Style the top navigation bar */
-    .navbar {
-        overflow: hidden;
-        background-color: #333;
-        font-family: Calisto MT;
-    }
-
-    #cmb {
-        text-align: center;
-        height: 40px;
-        width: 240px;
-        border: 1px solid transparent;
-        border-color: black;
-    }
-
-    .navbar a {
-        float: right;
-        font-size: 16px;
-        color: white;
-        text-align: center;
-        padding: 14px 17px;
-        text-decoration: none;
-    }
-
-
-    input {
-        border: none;
-        box-sizing: border-box;
-        border-bottom: 1px solid black;
-        background: transparent;
-        color: #b18757;
-        font-weight: bold;
-        font-family: 'Poppins';
-        font-size: 20px;
-    }
-
-    .submit {
-        width: 130px;
-        border-radius: 25px;
-        -moz-border-radius: 25px;
-        -webkit-border-radius: 25px;
-        text-transform: uppercase;
-        font-size: 13px;
-        cursor: pointer;
-    }
-
-    .submit-link {
-        border: 2px solid #b18757;
-        text-decoration: none;
-        display: inline-block;
-        vertical-align: middle;
-        padding: 12px 0;
-        text-align: center;
-    }
-
-        .submit-link:hover {
-            background: #FAFAD2;
-            color: #b18757;
+<head>
+    <meta charset="UTF-8" name="viewport" content="width-device=width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css" />
+    <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="~/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
+    <link rel="stylesheet" href="~/css/bootstrap.css">
+    <link rel="stylesheet" href="~/css/fonts.css">
+    <link rel="stylesheet" href="~/css/style.css">
+    <style>
+        .ie-panel {
+            display: none;
+            background: #212121;
+            padding: 10px 0;
+            box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
+            clear: both;
+            text-align: center;
+            position: relative;
+            z-index: 1;
         }
 
-    .dropdown-content a:hover {
-        background-color: #ddd;
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-
-    b {
-        color: #ECCF3E;
-        font-size: 19px;
-    }
-</style>
+        html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
+            display: block;
+        }
+    </style>
 
 
+
+
+    <style>
+        .ie-panel {
+            display: none;
+            background: #212121;
+            padding: 10px 0;
+            box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
+            clear: both;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
+            display: block;
+        }
+    </style>
+
+    <style>
+        body {
+            font-family: Calisto MT;
+            margin: 0;
+        }
+
+        table {
+            font-family: Calisto MT, sans-serif;
+            border-collapse: collapse;
+            width: 70%;
+        }
+
+        td, th {
+            border: 1px solid #F0E68C;
+            text-align: center;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #FAFAD2;
+        }
+
+        /* Style the top navigation bar */
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            font-family: Calisto MT;
+        }
+
+        #cmb {
+            text-align: center;
+            height: 40px;
+            width: 240px;
+            border: 1px solid transparent;
+            border-color: black;
+        }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+        input {
+            border: none;
+            box-sizing: border-box;
+            border-bottom: 1px solid black;
+            background: transparent;
+            color: #b18757;
+            font-weight: bold;
+            font-family: 'Poppins';
+            font-size: 20px;
+        }
+
+        .submit {
+            width: 130px;
+            border-radius: 25px;
+            -moz-border-radius: 25px;
+            -webkit-border-radius: 25px;
+            text-transform: uppercase;
+            font-size: 13px;
+            cursor: pointer;
+        }
+
+        .submit-link {
+            border: 2px solid #b18757;
+            text-decoration: none;
+            display: inline-block;
+            vertical-align: middle;
+            padding: 12px 0;
+            text-align: center;
+        }
+
+            .submit-link:hover {
+                background: #FAFAD2;
+                color: #b18757;
+            }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        b {
+            color: #ECCF3E;
+            font-size: 19px;
+        }
+    </style>
+</head>
+<div class="navbar">
+    <div class="dropdown">
+
+        <div class="dropdown-content">
+            @Html.ActionLink("My Account", "LoggedInView")
+            <a href="~/Home/Index">Logout</a>
+        </div>
+    </div>
+</div>
+<div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="~/images/o.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+<div class="preloader">
+    <div class="preloader-logo">
+        <a class="brand" href="index.html"><img class="brand-logo-dark" src="~/images/_blank.png" alt="" width="245" height="50" /><img class="brand-logo-light" src="~/images/logo-inverse-245x50.png" alt="" width="245" height="50" /></a>
+    </div>
+    <div class="preloader-body">
+        <div class="cssload-container">
+            <div class="cssload-speeding-wheel"></div>
+        </div>
+    </div>
+</div>
+<div class="page">
+    <!-- Page Header-->
+    <section>
+        <!-- Swiper-->
+        <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" data-slide-bg="../images/ol.jpg">
+                    <div class="swiper-slide-caption context-dark">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-10 col-lg-7">
+                                    <div class="box-animation">
+                                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Quality Higher Education</h6>
+                                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                            Any Successful Career Starts  <span class="text-italic font-weight-bold">With Good Education</span>
+                                        </h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" data-slide-bg="../images/v.jpeg">
+                    <div class="swiper-slide-caption context-dark">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-10 col-lg-7">
+                                    <div class="box-animation">
+                                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">A vAriety of programs</h6>
+                                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                            Providing Students with  <span class="text-italic font-weight-bold">Professional Education</span>
+                                        </h2>
+                                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" data-slide-bg="../images/s.jpeg">
+                    <div class="swiper-slide-caption context-dark">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-10 col-lg-7">
+                                    <div class="box-animation">
+                                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Campus Community</h6>
+                                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                            Become a Part of Our Campus and <span class="text-italic font-weight-bold">Make Friends</span>
+                                        </h2>
+                                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
+    <!-- A Few Words About Me-->
+
+
+</div>
+<div class="snackbars" id="form-output-global"></div>
+<script src="~/js/core.min.js"></script>
+<script src="~/js/script.js"></script>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <title>Add Class</title>
-    <div class="form-horizontal">
-        <h4>Add Class</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <h3 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Add Class </h3>
+                <div class="form-group">
+                    &emsp;&emsp;    <b>Class Name</b>
+                    &emsp;&emsp;&emsp;&emsp;      <select name="TeacherNames" id="cmb">
 
-        <div class="form-group">
-       al     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <select name="TeacherNames" id="cmb">
-
-                    @foreach (var t in ViewBag.Classes)
+                        @foreach (var t in ViewBag.Classes)
                 {
-                        <option value="@t">@t</option>
-                       
-                    }
-                </select>   @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            <option value="@t">@t</option>
+
+                        }
+                    </select>   @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+
+                </div>
 
 
 
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="submit-link submit" />
-            </div>
-        </div>
-    </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <br />
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                        <input type="submit" value="Create" class="submit-link submit" />
+                    </div>
+                </div>
+
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Class")
+    &emsp;&emsp;&emsp; @Html.ActionLink("Back to List", "Class")
 </div>
+<br />
+<br />
