--- a/SMS/SMS/Views/Admin/CreateSection.cshtml
+++ b/SMS/SMS/Views/Admin/CreateSection.cshtml
@@ -1,147 +1,178 @@
 ﻿@model SMS.Models.SectionVM
 
-<title>Add Section</title>
-
-<style>
-    body {
-        font-family: Calisto MT;
-        margin: 0;
-    }
-
-    table {
-        font-family: Calisto MT, sans-serif;
-        border-collapse: collapse;
-        width: 70%;
-    }
-
-    td, th {
-        border: 1px solid #F0E68C;
-        text-align: center;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #FAFAD2;
-    }
-
-
-    /* Style the top navigation bar */
-    .navbar {
-        overflow: hidden;
-        background-color: #333;
-        font-family: Calisto MT;
-    }
-
-    #cmb {
-        text-align: center;
-        height: 40px;
-        width: 240px;
-        border: 1px solid transparent;
-        border-color: black;
-    }
-
-    .navbar a {
-        float: right;
-        font-size: 16px;
-        color: white;
-        text-align: center;
-        padding: 14px 17px;
-        text-decoration: none;
-    }
-
-
-    input {
-        border: none;
-        box-sizing: border-box;
-        border-bottom: 1px solid black;
-        background: transparent;
-        color: #b18757;
-        font-weight: bold;
-        font-family: 'Poppins';
-        font-size: 20px;
-    }
-
-    .submit {
-        width: 130px;
-        border-radius: 25px;
-        -moz-border-radius: 25px;
-        -webkit-border-radius: 25px;
-        text-transform: uppercase;
-        font-size: 13px;
-        cursor: pointer;
-    }
-
-    .submit-link {
-        border: 2px solid #b18757;
-        text-decoration: none;
-        display: inline-block;
-        vertical-align: middle;
-        padding: 12px 0;
-        text-align: center;
-        color: 153;
-    }
-
-        .submit-link:hover {
-            background: #FAFAD2;
-            color: #b18757;
+@{ Layout = null;}
+<head>
+    <style>
+        .ie-panel {
+            display: none;
+            background: #212121;
+            padding: 10px 0;
+            box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
+            clear: both;
+            text-align: center;
+            position: relative;
+            z-index: 1;
         }
 
-    .dropdown-content a:hover {
-        background-color: #ddd;
-    }
+        html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
+            display: block;
+        }
+    </style>
 
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-</style>
+    <style>
+        body {
+            font-family: Calisto MT;
+            margin: 0;
+        }
+
+        table {
+            font-family: Calisto MT, sans-serif;
+            border-collapse: collapse;
+            width: 70%;
+        }
+
+        td, th {
+            border: 1px solid #F0E68C;
+            text-align: center;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #FAFAD2;
+        }
+
+        /* Style the top navigation bar */
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            font-family: Calisto MT;
+        }
+
+        #cmb {
+            text-align: center;
+            height: 40px;
+            width: 240px;
+            border: 1px solid transparent;
+            border-color: black;
+        }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+        input {
+            border: none;
+            box-sizing: border-box;
+            border-bottom: 1px solid black;
+            background: transparent;
+            color: #b18757;
+            font-weight: bold;
+            font-family: 'Poppins';
+            font-size: 20px;
+        }
+
+        .submit {
+            width: 130px;
+            border-radius: 25px;
+            -moz-border-radius: 25px;
+            -webkit-border-radius: 25px;
+            text-transform: uppercase;
+            font-size: 13px;
+            cursor: pointer;
+        }
+
+        .submit-link {
+            border: 2px solid #b18757;
+            text-decoration: none;
+            display: inline-block;
+            vertical-align: middle;
+            padding: 12px 0;
+            text-align: center;
+        }
+
+            .submit-link:hover {
+                background: #FAFAD2;
+                color: #b18757;
+            }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        b {
+            color: #ECCF3E;
+            font-size: 19px;
+        }
+    </style>
+</head>
+<div class="navbar">
+    <div class="dropdown">
+
+        <div class="dropdown-content">
+            @Html.ActionLink("My Account", "LoggedInView")
+            <a href="~/Home/Index">Logout</a>
+        </div>
+    </div>
+</div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Add Section</h4>
-        <hr />
+        <h3 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Add Section </h3>
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        &emsp;&emsp;
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        &emsp;&emsp;&emsp;    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        <br /><br />
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            &emsp;&emsp;  <b>Section Incharge</b>
-            &emsp;&emsp;
-            @{
-                var id = Request.Url.Segments[3];
-                int i = 0;
-            }
-
-            <select name="TeacherNames" id="cmb">
-
-                @foreach (var teacher in ViewBag.Teachers)
-                {
-                    <option value="@ViewBag.Ids[i]">@teacher</option>
-                    i++;
+            &emsp;&emsp;  <b>
+                Section Incharge
+                &emsp;&emsp;
+                @{
+                    var id = Request.Url.Segments[3];
+                    int i = 0;
                 }
-            </select>
+
+                &emsp;<select name="TeacherNames" id="cmb">
+
+                    @foreach (var teacher in ViewBag.Teachers)
+                {
+                        <option value="@ViewBag.Ids[i]">@teacher</option>
+                        i++;
+                    }
+                </select>
+            </b>
+
             @Html.ValidationMessageFor(model => model.TeacherId, "", new { @class = "text-danger" })
         </div>
         <p name="Id"></p>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input value="Create" class="btn btn-default" type="submit" />
+                &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;
+                <input value="Create" class="submit-link submit" type="submit" />
             </div>
         </div>
     </div>
-                }
+                    }
 @{
     var id2 = Request.Url.Segments[3];
 }
 <div>
-    @Html.ActionLink("Back To List", "Section", new { id = id2 })
+    &emsp;&emsp; @Html.ActionLink("Back To List", "Section", new { id = id2 })
 </div>
 
 @section Scripts {
