suggestions report. Made changes in delete of student and  Teacher.

--- a/SMS/SMS/Views/Admin/Suggestions.cshtml
+++ b/SMS/SMS/Views/Admin/Suggestions.cshtml
@@ -278,6 +278,9 @@
 
     <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Manage Requests </h2>
     <br>
+    <p>
+        <a class="btn btn-success" href=@Url.Action("ExportSuggestionReport")> Generate Report </a>
+    </p><br />
     @using (Html.BeginForm("Student", "Admin", FormMethod.Get))
     {
 
